exports[`test Renders properly when authenticated 1`] = `
<Grid>
  <Cell
    col={4}
    tablet={12}>
    <Connect(CurrentUserCrew)
      sex="male" />
  </Cell>
  <Cell
    col={8}
    offset={0}
    tablet={12}>
    <Connect(CrewList)
      sex="male" />
  </Cell>
</Grid>
`;

exports[`test Renders properly when not authenticated 1`] = `
<Grid>
  <Cell
    col={8}
    offset={2}
    tablet={12}>
    <Connect(CrewList)
      sex="female" />
  </Cell>
</Grid>
`;
